--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=7abe96acf49eaf2b242b4242bca4d805
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/mediatekformation"
+DATABASE_URL="mysql://msztyukj_HillelMedia:RFYaJw9zJ94SMh@localhost:3306/msztyukj_Mediatek"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -43,6 +43,6 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/mediatekformation"
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-KEYCLOAK_SECRET=KfVxQcmSu4W80umDxEr8RQKUO6EUdkHT
+KEYCLOAK_SECRET=YFFMoELnXmx7eEGxbOUF9NNMTV3WlRCw
 KEYCLOAK_CLIENTID=Mediatek-formation
-KEYCLOAK_APP_URL=http://localhost:8080
+KEYCLOAK_APP_URL=https://keycloakhillel.francecentral.cloudapp.azure.com
